[package]
name = "partition_operation"
version = "0.5.0"
edition = "2018"
authors = ["Aurelia Peters <popefelix@gmail.com>"]
repository = "https://github.com/PopeFelix/rust-graphql-partition-operation"
description = "A library for partitioning GraphQL operations"
publish = false
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.4"
log = "0.4.14"
lazy_static ="1.4.0"
tracing = "0.1.29"
itertools = "0.10.3"
anyhow = "1.0.53"
random-string = "1.0.0"
rand = "0.8.4"
graphql-parser = "0.4.0"
